# nextcloud-music-player

./: .env  .gitignore  =0.24.0  CHANGELOG.md  LICENSE  MCP_USAGE.md  README.md  REVERT-2491a28d945d2d90e9eed09247dc9f88e9070300.md  REVERT_COMMIT.md  ROLLBACK_EXPLANATION.md  demo.py  demo_mcp.py  demo_output_html.html  demo_output_react.jsx  demo_output_vue.vue  ios-info-template.plist  mcp_server.py  pyproject.toml  requirements.txt  run.py  test_config_save.py  test_ios_optimization.py  test_linux_build.py  test_playback_controller.py
.github/: CICD_SUMMARY.md  copilot-instructions.md
.github/workflows/: README.md  build.yml  mobile.yml  quality.yml  release.yml  test-android-fix.yml  test-linux-fix.yml
config/: development.json  logging_development.json
docs/: ANDROID_BUILD_FIX.md  DEPENDENCY_FIX.md  MOBILE_BUILD_GUIDE.md  iOS_BACKGROUND_PLAYBACK.md  iOS_COMPLETE_FIX.md  iOS_MUSIC_PERSISTENCE_FIX.md  iOS_PROGRESS_FIX.md  iOS_SIGNING_GUIDE.md
docs/api/: __main__.markdown  app.markdown  config_manager.markdown  index.markdown  ios_background_audio.markdown  mcp_server.markdown  mcp_tools_base.markdown  mcp_tools_build_automation.markdown  mcp_tools_code_quality.markdown  mcp_tools_configuration.markdown  mcp_tools_deployment.markdown  mcp_tools_documentation.markdown  mcp_tools_project_scaffolding.markdown  mcp_tools_test_automation.markdown  music_library.markdown  nextcloud_client.markdown  platform_audio.markdown  services_demo_service_service.markdown  services_lyrics_service.markdown  services_music_service.markdown  services_playback_controller.markdown  services_playback_service.markdown  services_playlist_manager.markdown  views_components_lyrics_component.markdown  views_components_playback_control_component.markdown  views_components_playlist_component.markdown  views_connection_view.markdown  views_file_list_view.markdown  views_playback_view.markdown  views_view_manager.markdown
scripts/: check_dependencies.sh  release.sh  test_android_deps.sh
src/nextcloud_music_player/: __init__.py  __main__.py  ai_processor.py  app.py  config_manager.py  ios_background_audio.py  music_library.py  nextcloud_client.py  platform_audio.py  ui_converter_views.py
src/nextcloud_music_player.dist-info/: METADATA  WHEEL
src/nextcloud_music_player.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nextcloud_music_player/mcp/: README.md  __init__.py  server.py
src/nextcloud_music_player/mcp/tools/: __init__.py  base.py  build_automation.py  code_quality.py  configuration.py  deployment.py  documentation.py  project_scaffolding.py  test_automation.py
src/nextcloud_music_player/resources/: icon.icns
src/nextcloud_music_player/services/: __init__.py  demo_service_service.py  lyrics_service.py  music_service.py  playback_controller.py  playback_service.py  playlist_manager.py
src/nextcloud_music_player/utils/: __init__.py  platform_ui.py
src/nextcloud_music_player/views/: __init__.py  connection_view.py  file_list_view.py  folder_selector.py  playback_view.py  view_manager.py
src/nextcloud_music_player/views/components/: __init__.py  lyrics_component.py  playback_control_component.py  playlist_component.py
tests/: test_ai_processor.py  test_basic.py  test_minimal.py  test_ui_converter_views.py
