[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenshot-to-ui-converter"
version = "0.1.0"
description = "AI-powered tool to convert screenshots to optimized UI code using Stable Diffusion, ControlNet, and code generation models"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["screenshot", "ui", "ai", "converter", "stable-diffusion", "controlnet", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "toga>=0.4.0",
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "pillow>=8.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "mypy",
    "briefcase",
]
ai = [
    "torch>=1.11.0",
    "transformers>=4.20.0",
    "diffusers>=0.21.0",
    "controlnet-aux>=0.0.7",
    "opencv-python>=4.5.0",
]

# 明确指定包的位置
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nextcloud_music_player.resources" = ["*"]

[project.urls]
Homepage = "https://example.com/nextcloud-music-player"
"Bug Tracker" = "https://github.com/example/nextcloud-music-player/issues"
"Source Code" = "https://github.com/example/nextcloud-music-player"

[project.scripts]
screenshot-to-ui = "nextcloud_music_player.__main__:main"

[tool.briefcase]
project_name = "NextCloud Music Player"
formal_name = "NextCloud Music Player"
bundle = "com.example"
version = "0.1.0"
url = "https://example.com/nextcloud-music-player"
author = "Your Name"
author_email = "your.email@example.com"
description = "A cross-platform music player with NextCloud integration"

[tool.briefcase.app.nextcloud-music-player]
formal_name = "NextCloud Music Player"
description = "A cross-platform music player with NextCloud integration"
icon = "src/nextcloud_music_player/resources/icon"
sources = [
    "src/nextcloud_music_player",
]
test_sources = [
    "tests",
]

[tool.briefcase.app.nextcloud-music-player.macOS]
requires = [
    "toga-cocoa~=0.4.0",
    "pygame>=2.0.0",
]

[tool.briefcase.app.nextcloud-music-player.linux]
requires = [
    "toga-gtk~=0.4.0",
    "pygame>=2.0.0",
]
system_requires = [
    "libgirepository1.0-dev",
    "libcairo2-dev", 
    "libpango1.0-dev",
    "libwebkit2gtk-4.1-dev | libwebkit2gtk-4.0-dev",
    "gir1.2-webkit2-4.1 | gir1.2-webkit2-4.0",
    "pkg-config",
    "build-essential",
]

[tool.briefcase.app.nextcloud-music-player.linux.system.debian]
system_runtime_requires = [
    "libcairo-gobject2",
    "libgirepository-1.0-1", 
    "libgtk-3-0",
    "libpango-1.0-0",
    "libwebkit2gtk-4.1-0 | libwebkit2gtk-4.0-37",
    "gir1.2-webkit2-4.1 | gir1.2-webkit2-4.0",
]

[tool.briefcase.app.nextcloud-music-player.windows]
requires = [
    "toga-winforms~=0.4.0",
    "pygame>=2.0.0",
]

[tool.briefcase.app.nextcloud-music-player.iOS]
requires = [
    "toga-iOS~=0.4.0",
    "requests>=2.25.0",
    "httpx>=0.24.0",
]

# iOS权限配置
permission.network_request = "This app needs network access to connect to your NextCloud server and sync music files."
permission.local_network = "This app needs local network access to connect to your NextCloud server."

# iOS后台播放配置
supported_device_families = ["1", "2"]  # iPhone 和 iPad

# Info.plist 配置
info.UIBackgroundModes = ["audio"]
info.NSAppTransportSecurity = {NSAllowsArbitraryLoads = true, NSAllowsLocalNetworking = true}

[tool.briefcase.app.nextcloud-music-player.android]
requires = [
    "toga-android~=0.4.0",
    "requests>=2.25.0",
    "httpx>=0.24.0",
]
# Android不需要音频依赖，使用系统提供的媒体播放功能
gradle_dependencies = [
    "androidx.media:media:1.6.0",
    "androidx.lifecycle:lifecycle-service:2.6.1",
]
permission.INTERNET = "This app needs internet access to connect to your NextCloud server."
permission.WAKE_LOCK = "This app needs wake lock permission for background music playback."
permission.FOREGROUND_SERVICE = "This app needs foreground service permission for music playback."

[tool.briefcase.app.nextcloud-music-player.web]
requires = [
    "toga-web~=0.4.0",
]
